feat: connect user with postgres
